# BNAI

./: .gitignore  README.md
aiml/: README.md
aiml/categories/: capabilities.aiml  emotional.aiml  farewells.aiml  greetings.aiml  meta.aiml  politeness.aiml  smalltalk.aiml
aiml/tests/: test_aiml_compiler.py  test_bootstrap.py
aiml/tools/: aiml_compiler.py  bootstrap.py
docs/: benchmarks.md  context_folding.md  model_card.md  training_log.md
model/: architecture.py  eval.py  export.py  folding.py  phase2_train.py  requirements.txt  sft.py  train.py  train_utils.py
model/configs/: base_fp16_baseline.yaml  base_ternary.yaml  phase2_gist16.yaml  phase2_gist4.yaml  phase2_gist8.yaml  phase2_smoke_test.yaml  sft.yaml  sft_smoke_test.yaml  smoke_test.yaml  smoke_test_fp16.yaml  stage1_25m_fp16_baseline.yaml  stage1_25m_ternary.yaml  stage2_50m_fp16_baseline.yaml  stage2_50m_ternary.yaml  stage3_75m_fp16_baseline.yaml  stage3_75m_ternary.yaml  stage4_125m_fp16_baseline.yaml  stage4_125m_ternary.yaml
model/data/: pipeline.py
model/tests/: test_architecture.py  test_eval_folding.py  test_export.py  test_folding.py  test_pipeline.py  test_tokenizer.py
model/tokenizer/: bpe.py  train_tokenizer.py
prototypes/context-folding/: index.html
runtime/: Cargo.toml
runtime/src/: lib.rs  model.rs  packed_format.rs  tokenizer.rs
runtime/tests/: fixture_tests.rs
runtime/tests/fixtures/: benny-placeholder.bnai.tokenizer.json
web/: .gitignore  eslint.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: Footer.tsx  (+3 more)
(+54 files in other folders)
